--- a/samples/font/Makefile.in
+++ b/samples/font/Makefile.in
@@ -149,7 +149,7 @@ font$(EXEEXT): $(FONT_OBJECTS) $(__font___win32rc)
 	$(CXX) -o $@ $(FONT_OBJECTS)    -L$(LIBDIRNAME) $(LDFLAGS_GUI) $(SAMPLES_RPATH_FLAG) $(LDFLAGS)  $(__WXLIB_CORE_p)  $(__WXLIB_BASE_p)  $(__WXLIB_MONO_p) $(__LIB_SCINTILLA_IF_MONO_p) $(__LIB_TIFF_p) $(__LIB_JPEG_p) $(__LIB_PNG_p)  $(EXTRALIBS_FOR_GUI) $(__LIB_ZLIB_p) $(__LIB_REGEX_p) $(__LIB_EXPAT_p) $(EXTRALIBS_FOR_BASE) $(LIBS)
 	$(__font___os2_emxbindcmd)
 
-@COND_PLATFORM_MACOSX_1@font.app/Contents/PkgInfo: font$(EXEEXT) $(top_srcdir)/src/osx/carbon/Info.plist.in $(top_srcdir)/src/osx/carbon/wxmac.icns
+@COND_PLATFORM_MACOSX_1@font.app/Contents/PkgInfo: font$(EXEEXT) $(top_srcdir)/src/osx/carbon/Info.plist.in $(top_srcdir)/src/osx/carbon/wxmac.icns  $(srcdir)/wxprivate.ttf
 @COND_PLATFORM_MACOSX_1@	mkdir -p font.app/Contents
 @COND_PLATFORM_MACOSX_1@	mkdir -p font.app/Contents/MacOS
 @COND_PLATFORM_MACOSX_1@	mkdir -p font.app/Contents/Resources
@@ -168,10 +168,12 @@ font$(EXEEXT): $(FONT_OBJECTS) $(__font___win32rc)
 @COND_PLATFORM_MACOSX_1@	
 @COND_PLATFORM_MACOSX_1@	
 @COND_PLATFORM_MACOSX_1@	cp -f $(top_srcdir)/src/osx/carbon/wxmac.icns font.app/Contents/Resources/wxmac.icns
+@COND_PLATFORM_MACOSX_1@	mkdir -p font.app/Contents/Resources/Fonts
+@COND_PLATFORM_MACOSX_1@	cp -f $(srcdir)/wxprivate.ttf font.app/Contents/Resources/Fonts
 
 @COND_PLATFORM_MACOSX_1@font_bundle: $(____font_BUNDLE_TGT_REF_DEP)
 
-data:
+data: 
 	@mkdir -p .
 	@for f in wxprivate.ttf; do \
 	if test ! -f ./$$f -a ! -d ./$$f ; \
