Add wxUSE_PRIVATE_FONTS and drop wxHAS_PRIVATE_FONTS
Handle this feature as all the other ones and provide a configure switch
and a setup.h option to disable it if necessary, as it may be desirable
to do it, especially under Linux, to avoid extra dependency on pangoft2
if this functionality is unnecessary.

--- a/configure.in
+++ b/configure.in
@@ -925,6 +925,7 @@ WX_ARG_FEATURE(notifmsg,    [  --enable-notifmsg       use wxNotificationMessage
 WX_ARG_FEATURE(odcombobox,  [  --enable-odcombobox     use wxOwnerDrawnComboBox class], wxUSE_ODCOMBOBOX)
 WX_ARG_FEATURE(popupwin,    [  --enable-popupwin       use wxPopUpWindow class], wxUSE_POPUPWIN)
 WX_ARG_FEATURE(prefseditor, [  --enable-prefseditor    use wxPreferencesEditor class], wxUSE_PREFERENCES_EDITOR)
+WX_ARG_FEATURE(privatefonts,[  --enable-privatefonts   provide wxFont::AddPrivateFont() method], wxUSE_PRIVATE_FONTS)
 WX_ARG_FEATURE(radiobox,    [  --enable-radiobox       use wxRadioBox class], wxUSE_RADIOBOX)
 WX_ARG_FEATURE(radiobtn,    [  --enable-radiobtn       use wxRadioButton class], wxUSE_RADIOBTN)
 WX_ARG_FEATURE(richmsgdlg,  [  --enable-richmsgdlg     use wxRichMessageDialog class], wxUSE_RICHMSGDLG)
@@ -2963,13 +2964,15 @@ libraries returned by 'pkg-config gtk+-2.0 --libs' or 'gtk-config
             dnl fi
         fi
 
-        PKG_CHECK_MODULES(PRIVATE_FONTS, [fontconfig >= 2.8.0 pangoft2 >= 1.38.0],
-                          [
-                            AC_DEFINE(wxHAVE_FONTCONFIG_2_8_0)
-                            CXXFLAGS="$FONTCONFIG_CFLAGS $CXXFLAGS"
-                            GUI_TK_LIBRARY="$GUI_TK_LIBRARY $FONTCONFIG_LIBS"
-                          ],
-                          [AC_MSG_WARN([fontconfig library not found or too old, run-time font loading won't be supported by wxFont])])
+        if test "$wxUSE_PRIVATE_FONTS" = "yes"; then
+            PKG_CHECK_MODULES(PRIVATE_FONTS, [fontconfig >= 2.8.0 pangoft2 >= 1.38.0],
+                              [
+                                AC_DEFINE(wxUSE_PRIVATE_FONTS)
+                                CXXFLAGS="$PRIVATE_FONTS_CFLAGS $CXXFLAGS"
+                                GUI_TK_LIBRARY="$GUI_TK_LIBRARY $PRIVATE_FONTS_LIBS"
+                              ],
+                              [AC_MSG_WARN([run-time font loading won't be supported by wxFont])])
+        fi
     fi
 
     if test "$wxUSE_DFB" = 1; then
@@ -6902,6 +6905,10 @@ fi
 if test "$wxUSE_PREFERENCES_EDITOR" = "yes"; then
     AC_DEFINE(wxUSE_PREFERENCES_EDITOR)
     SAMPLES_SUBDIRS="$SAMPLES_SUBDIRS preferences"
+fi
+
+if test "$wxUSE_PRIVATE_FONTS" = "yes"; then
+    AC_DEFINE(wxUSE_PRIVATE_FONTS)
 fi
 
 if test "$wxUSE_DIALUP_MANAGER" = "yes"; then
