--- a/setup.h.in
+++ b/setup.h.in
@@ -468,6 +468,8 @@
 
 #define wxUSE_PREFERENCES_EDITOR 0
 
+#define wxUSE_PRIVATE_FONTS 0
+
 #define wxUSE_RICHTOOLTIP 0
 
 #define wxUSE_SASH          0
@@ -833,10 +835,6 @@
  */
 #define wxUSE_PLUGINS 0
 
-/*
- * Use FontConfig library for private fonts support in wxFont.
- */
-#undef wxHAVE_FONTCONFIG_2_8_0
 /*
  * Use GTK print for printing under GTK+ 2.10+
  */
