--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,6 +44,6 @@ before_build:
         Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
         throw "There are newer queued builds for this pull request, failing early." }
 
-build_script: build\tools\appveyor.bat
+build_script: c:\projects\wxwidgets\build\tools\appveyor.bat
 
-test: off
+test_script: c:\projects\wxwidgets\build\tools\appveyor-test.bat
