Skip AppVeyor CI builds on documentation-only changes
There is no need to rebuild everything if only the documentation files
have changed.

Unfortunately there doesn't seem to be any way to do the same thing for
Travis CI yet, see https://github.com/travis-ci/travis-ci/issues/6301

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,12 @@ branches:
   - master
   - WX_3_0_BRANCH
 
+skip_commits:
+  files:
+    - docs/
+    - interface/
+    - misc/
+
 environment:
   matrix:
   - TOOLSET: msbuild
