--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ install: git submodule update --init
 
 before_build:
 - ps: |
-    $env:PATH = $env:PATH -replace "C:\\Program Files \(x86\)\\Git\\bin",""
+    $env:PATH = $env:PATH -replace "C:\\Program Files\\Git\\usr\\bin",""
     if (($env:compiler -ne "msys2") -and ($env:compiler -ne "cygwin")) {
       gc include\wx\msw\setup0.h |
       %{$_ -replace "define wxUSE_STL 0", "define wxUSE_STL $env:wxUSE_STL"} |
