--- a/configure.in
+++ b/configure.in
@@ -7827,24 +7827,51 @@ LDFLAGS="$LDFLAGS $PROFILE_FLAGS"
 
 WXCONFIG_LIBS="$LIBS"
 
-dnl wx-config must output builtin 3rd party libs in --libs in static build:
+dnl wx-config must output 3rd party libs in --libs in static build:
 if test "$wxUSE_REGEX" = "builtin" ; then
     wxconfig_3rdparty="regex${lib_unicode_suffix} $wxconfig_3rdparty"
 fi
-if test "$wxUSE_EXPAT" = "builtin" ; then
-    wxconfig_3rdparty="expat $wxconfig_3rdparty"
-fi
-if test "$wxUSE_LIBTIFF" = "builtin" ; then
-    wxconfig_3rdparty="tiff $wxconfig_3rdparty"
-fi
-if test "$wxUSE_LIBJPEG" = "builtin" ; then
-    wxconfig_3rdparty="jpeg $wxconfig_3rdparty"
-fi
-if test "$wxUSE_LIBPNG" = "builtin" ; then
-    wxconfig_3rdparty="png $wxconfig_3rdparty"
-fi
-if test "$wxUSE_ZLIB" = "builtin" ; then
-    wxconfig_3rdparty="zlib $wxconfig_3rdparty"
+case "$wxUSE_EXPAT" in
+    builtin)
+        wxconfig_3rdparty="expat $wxconfig_3rdparty"
+        ;;
+    sys)
+        WXCONFIG_LIBS="$EXPAT_LINK $WXCONFIG_LIBS"
+        ;;
+esac
+case "$wxUSE_ZLIB" in
+    builtin)
+        wxconfig_3rdparty="zlib $wxconfig_3rdparty"
+        ;;
+    sys)
+        WXCONFIG_LIBS="$ZLIB_LINK $WXCONFIG_LIBS"
+        ;;
+esac
+if test "$wxUSE_GUI" = "yes"; then
+    case "$wxUSE_LIBTIFF" in
+        builtin)
+            wxconfig_3rdparty="tiff $wxconfig_3rdparty"
+            ;;
+        sys)
+            WXCONFIG_LIBS="$TIFF_LINK $LZMA_LINK $JBIG_LINK $WXCONFIG_LIBS"
+            ;;
+    esac
+    case "$wxUSE_LIBJPEG" in
+        builtin)
+            wxconfig_3rdparty="jpeg $wxconfig_3rdparty"
+            ;;
+        sys)
+            WXCONFIG_LIBS="$JPEG_LINK $WXCONFIG_LIBS"
+            ;;
+    esac
+    case "$wxUSE_LIBPNG" in
+        builtin)
+            wxconfig_3rdparty="png $wxconfig_3rdparty"
+            ;;
+        sys)
+            WXCONFIG_LIBS="$PNG_LINK $WXCONFIG_LIBS"
+            ;;
+    esac
 fi
 
 for i in $wxconfig_3rdparty ; do
