--- a/setup.h.in
+++ b/setup.h.in
@@ -68,6 +68,9 @@
 /* Define this if your version of GTK+ is >= 3.0 */
 #undef __WXGTK3__
 
+/* Define this if your version of GTK+ is >= 3.90.0 */
+#undef __WXGTK4__
+
 /* Define this if you want to use GPE features */
 #undef __WXGPE__
 
