--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -250,6 +250,8 @@ TEST_GUI_OBJECTS =  \
 	test_gui_safearrayconverttest.o \
 	test_gui_settings.o \
 	test_gui_socket.o \
+	test_gui_tlw.o \
+	test_gui_dataview.o \
 	test_gui_boxsizer.o \
 	test_gui_gridsizer.o \
 	test_gui_wrapsizer.o \
@@ -1014,6 +1016,12 @@ test_gui_settings.o: $(srcdir)/misc/settings.cpp $(TEST_GUI_ODEP)
 
 test_gui_socket.o: $(srcdir)/net/socket.cpp $(TEST_GUI_ODEP)
 	$(CXXC) -c -o $@ $(TEST_GUI_CXXFLAGS) $(srcdir)/net/socket.cpp
+
+test_gui_tlw.o: $(srcdir)/persistence/tlw.cpp $(TEST_GUI_ODEP)
+	$(CXXC) -c -o $@ $(TEST_GUI_CXXFLAGS) $(srcdir)/persistence/tlw.cpp
+
+test_gui_dataview.o: $(srcdir)/persistence/dataview.cpp $(TEST_GUI_ODEP)
+	$(CXXC) -c -o $@ $(TEST_GUI_CXXFLAGS) $(srcdir)/persistence/dataview.cpp
 
 test_gui_boxsizer.o: $(srcdir)/sizers/boxsizer.cpp $(TEST_GUI_ODEP)
 	$(CXXC) -c -o $@ $(TEST_GUI_CXXFLAGS) $(srcdir)/sizers/boxsizer.cpp
