--- a/tests/makefile.gcc
+++ b/tests/makefile.gcc
@@ -231,6 +231,8 @@ TEST_GUI_OBJECTS =  \
 	$(OBJS)\test_gui_safearrayconverttest.o \
 	$(OBJS)\test_gui_settings.o \
 	$(OBJS)\test_gui_socket.o \
+	$(OBJS)\test_gui_tlw.o \
+	$(OBJS)\test_gui_dataview.o \
 	$(OBJS)\test_gui_boxsizer.o \
 	$(OBJS)\test_gui_gridsizer.o \
 	$(OBJS)\test_gui_wrapsizer.o \
@@ -1043,6 +1045,12 @@ $(OBJS)\test_gui_settings.o: ./misc/settings.cpp
 	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\test_gui_socket.o: ./net/socket.cpp
+	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\test_gui_tlw.o: ./persistence/tlw.cpp
+	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\test_gui_dataview.o: ./persistence/dataview.cpp
 	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\test_gui_boxsizer.o: ./sizers/boxsizer.cpp
