--- a/tests/test_vc8_test_gui.vcproj
+++ b/tests/test_vc8_test_gui.vcproj
@@ -911,6 +911,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\persistence\dataview.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\controls\dataviewctrltest.cpp"
 				>
 			</File>
@@ -1212,6 +1216,10 @@
 			</File>
 			<File
 				RelativePath=".\controls\textentrytest.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\persistence\tlw.cpp"
 				>
 			</File>
 			<File
