--- a/tests/test_vc9_test_gui.vcproj
+++ b/tests/test_vc9_test_gui.vcproj
@@ -883,6 +883,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\persistence\dataview.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\controls\dataviewctrltest.cpp"
 				>
 			</File>
@@ -1184,6 +1188,10 @@
 			</File>
 			<File
 				RelativePath=".\controls\textentrytest.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\persistence\tlw.cpp"
 				>
 			</File>
 			<File
