Don't check for non-standatd xlocale.h in configure
Testing for xlocale.h was due to a misunderstanding, this header wasn't
supposed to define locale_t which is defined by locale.h itself and was
just some internal glibc header which was removed in its 2.26 release,
see

https://sourceware.org/glibc/wiki/Release/2.26#Removal_of_.27xlocale.h.27

Stop checking for it in configure and also don't always define
wxUSE_XLOCALE but only do it if the configure test succeeded.

--- a/configure.in
+++ b/configure.in
@@ -5757,17 +5757,11 @@ if test "$wxUSE_INTL" = "yes" ; then
 fi
 
 if test "$wxUSE_XLOCALE" = "yes" ; then
-    AC_DEFINE(wxUSE_XLOCALE)
-
-    dnl even if xlocale.h exists, it may not contain all that
-    dnl wx needs. check if strtod_l() really is available.
-    AC_CACHE_CHECK([for complete xlocale],
-                   wx_cv_func_strtod_l,
+    AC_CACHE_CHECK([for locale_t], wx_cv_type_locale_t,
     [
         AC_LANG_PUSH(C++)
         AC_TRY_COMPILE(
         [
-        #include <xlocale.h>
         #include <locale.h>
         #include <stdlib.h>
         ],
@@ -5775,16 +5769,20 @@ if test "$wxUSE_XLOCALE" = "yes" ; then
         locale_t t;
         strtod_l(NULL, NULL, t);
         ],
-        wx_cv_func_strtod_l=yes,
-        wx_cv_func_strtod_l=no
+        wx_cv_type_locale_t=yes,
+        wx_cv_type_locale_t=no
         )
         AC_LANG_POP()
     ])
 
-    if test "$wx_cv_func_strtod_l" = "yes" ; then
+    if test "$wx_cv_type_locale_t" = "yes" ; then
+        AC_DEFINE(wxUSE_XLOCALE)
+
         dnl We don't test (just) for locale_t existence, but we still define
         dnl this symbol to avoid changing the existing code using it.
         AC_DEFINE(HAVE_LOCALE_T)
+    else
+        AC_MSG_WARN([No locale_t support, wxXLocale won't be available])
     fi
 fi
 
