Explicitly use libc++ in C++11 CMake macOS builds on Travis CI
Just using -DCMAKE_CXX_STANDARD=11 isn't enough, as it doesn't seem to
use C++11 for configuration checks, so set CMAKE_CXX_FLAGS explicitly
too.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
           env: wxCONFIGURE_FLAGS="--enable-cxx11" wxMAKEFILE_FLAGS="CXXFLAGS=-std=c++11" wxSKIP_SAMPLES=1
         - os: osx
           compiler: clang
-          env: wxTOOLSET=cmake wxCMAKE_GENERATOR=Xcode wxCMAKE_DEFINES="-DCMAKE_CXX_STANDARD=11"
+          env: wxTOOLSET=cmake wxCMAKE_GENERATOR=Xcode wxCMAKE_DEFINES="-DCMAKE_CXX_STANDARD=11 -DCMAKE_CXX_FLAGS=-stdlib=libc++"
 
 branches:
     only:
