--- a/configure.in
+++ b/configure.in
@@ -1154,7 +1154,7 @@ if test "x$wxUSE_UNIVERSAL_BINARY" != xno ; then
     if test "x$wxUSE_UNIVERSAL_BINARY" != xyes; then
         OSX_ARCH_OPTS=$wxUSE_UNIVERSAL_BINARY
     else dnl Use all architectures supported
-        OSX_ARCH_OPTS="ppc,i386"
+        OSX_ARCH_OPTS="i386"
         if test "$wxUSE_OSX_COCOA" = 1; then
             OSX_ARCH_OPTS="$OSX_ARCH_OPTS,x86_64"
         fi
